# resumate

./: .env.example  .gitignore  Dockerfile  README.md  bootstrap.py  docker-compose.yml  pyproject.toml  railway.toml  start.sh
frontend/: .env.example  .env.local.example  Dockerfile  Dockerfile.bak  middleware.js  next.config.mjs  package-lock.json  package.json  railway.toml  tailwind.config.js
frontend/app/: globals.css  layout.jsx  not-found.jsx  page.jsx
frontend/app/(app)/: layout.jsx
frontend/app/(app)/applications/: page.jsx
frontend/app/(app)/dashboard/: page.jsx
frontend/app/(app)/email-drafts/: page.jsx
frontend/app/(app)/forms/: page.jsx
frontend/app/(app)/integrations/: page.jsx
frontend/app/(app)/internships/: page.jsx
frontend/app/(auth)/: layout.jsx
frontend/components/: AppShell.jsx  Badge.jsx  Logo.jsx  ResumeUpload.jsx  ReviewModal.jsx  Sidebar.jsx  Spinner.jsx  SplineHero.jsx  StatCard.jsx  ThemeProvider.jsx  Toast.jsx  Topbar.jsx
frontend/lib/: api.js  supabase.js
src/: config.py  messaging.py  orchestrator.py
src/agents/: application.py  base.py  discovery.py  form_filler.py  internship_discovery.py  job_extractor.py  matching.py  tailoring.py  tracking.py
src/api/: main.py
src/db/: client.py  migration_internships.sql  migration_multiuser.sql  schema.sql
src/integrations/: gmail.py  whatsapp.py
src/llm/: claude.py  gemini.py
src/scrapers/: internship_sources.py  remote_sources.py
tests/: test_pipeline_dry.py
whatsapp-service/: .gitignore  Dockerfile  index.js  package-lock.json  package.json
(+11 files in other folders)
