[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "supabase>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    # WhatsApp
    "twilio>=9.0.0",
    # Gmail + Gemini
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-genai>=1.0.0",
    "groq>=0.9.0",
    "faster-whisper>=1.0.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # Resume parsing fallbacks (used when Gemini is rate-limited)
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
